--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "react": "16.8.3",
     "react-native": "0.59.1",
-    "react-native-firebase": "^5.2.3"
+    "react-native-firebase": "^5.2.3",
+    "react-native-google-signin": "^1.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
