--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react": "16.8.3",
     "react-native": "0.59.1",
     "react-native-firebase": "^5.3.1",
-    "react-native-google-signin": "^1.2.1"
+    "react-native-flip-card": "^3.5.5",
+    "react-native-google-signin": "^1.2.1",
+    "react-native-snap-carousel": "^3.7.5"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
