--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-native-firebase": "^5.3.1",
     "react-native-flip-card": "^3.5.5",
     "react-native-google-signin": "^1.2.1",
-    "react-native-snap-carousel": "^3.7.5"
+    "react-native-snap-carousel": "^3.7.5",
+    "react-native-view-overflow": "0.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
